# fact-check

./: .env.example  .gitignore  README.md  bot.py  db.go  db.py  fact_checker.go  fact_checker.py  go.mod  go.sum  main.go  pyproject.toml
